# openvins-srf

./: .gitignore  CMakeLists.txt  README.md
application/vio_sim/: CMakeLists.txt  bag_reader.cpp  bag_reader.h  mono_vio.cpp
config/euroc_mav/: estimator_config.yaml
config/rpng_sim/: estimator_config.yaml
core/: CMakeLists.txt
core/src/: dummy.cpp  test_profile.cpp  test_webcam.cpp
core/src/cam/: CamBase.h  CamEqui.h  CamRadtan.h
core/src/feat/: Feature.cpp  Feature.h  FeatureDatabase.cpp  FeatureDatabase.h  FeatureHelper.h  FeatureInitializer.cpp  FeatureInitializer.h  FeatureInitializerOptions.h
core/src/lowpass_filter/: lowpass_filter.cpp  lowpass_filter.h
core/src/sim/: BsplineSE3.cpp  BsplineSE3.h
core/src/track/: Grider_FAST.h  Grider_GRID.h  TrackBase.cpp  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp  TrackKLT.h  TrackSIM.cpp  TrackSIM.h
core/src/types/: IMU.h  JPLQuat.h  Landmark.cpp  Landmark.h  LandmarkRepresentation.h  PoseJPL.h  Type.h  Vec.h
core/src/utils/: constant.h  dataset_reader.h  global_flag_pool.h  opencv_lambda_body.h  opencv_yaml_parse.h  print.cpp  print.h  quat_ops.h  sensor_data.h  trajectory_logger.cpp  trajectory_logger.h
core/src/visualization/: visualization.cpp  visualization.h
doc/: SquareRoot Filter Based VIO.md
doc/assets/: SquareRoot Filter Based VIO.md
init/: CMakeLists.txt
init/src/: dummy.cpp  test_simulation.cpp
init/src/init/: InertialInitializer.cpp  InertialInitializer.h  InertialInitializerOptions.h
init/src/sim/: SimulatorInit.cpp  SimulatorInit.h
init/src/static/: StaticInitializer.cpp  StaticInitializer.h
init/src/utils/: helper.h
msckf/: CMakeLists.txt
msckf/src/: dummy.cpp  test_filters_srf.cpp  test_filters_srif.cpp  test_sim_meas.cpp  test_sim_repeat.cpp  test_vio_simulation.cpp
msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerHelper.cpp  VioManagerOptions.h
msckf/src/sim/: Simulator.cpp  Simulator.h
msckf/src/state/: FilterEKF.cpp  FilterEKF.h  FilterSRF.cpp  FilterSRF.h  FilterSRIF.cpp  FilterSRIF.h  FilterUtils.cpp  FilterUtils.h  FilterWrapper.cpp  FilterWrapper.h  Propagator.cpp  Propagator.h  State.cpp  State.h  StateOptions.h
msckf/src/update/: UpdaterHelper.cpp  UpdaterHelper.h  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterOptions.h  UpdaterSLAM.cpp  UpdaterSLAM.h  UpdaterZeroVelocity.cpp  UpdaterZeroVelocity.h
msckf/src/utils/: NoiseManager.h
